tests/invalid/user_field_access_decl_override.err_exp
user_field_access_decl_override.m:020: In `f1'(in) = out:
user_field_access_decl_override.m:020:   warning: determinism declaration could
user_field_access_decl_override.m:020:   be tighter.
user_field_access_decl_override.m:020:   Declared `semidet', inferred `det'.
user_field_access_decl_override.m:021: In `f1 :='(in, in) = out:
user_field_access_decl_override.m:021:   warning: determinism declaration could
user_field_access_decl_override.m:021:   be tighter.
user_field_access_decl_override.m:021:   Declared `semidet', inferred `det'.
user_field_access_decl_override.m:023: In `get_foo_f1'(in) = out:
user_field_access_decl_override.m:023:   error: determinism declaration not
user_field_access_decl_override.m:023:   satisfied.
user_field_access_decl_override.m:023:   Declared `det', inferred `semidet'.
user_field_access_decl_override.m:028:   Call to
user_field_access_decl_override.m:028:   `user_field_access_decl_override.f1'(in)
user_field_access_decl_override.m:028:   = out can fail.
user_field_access_decl_override.m:028:   In unification of `X' and `f1(Foo)':
user_field_access_decl_override.m:030: In `set_foo_f1'(in, in, out):
user_field_access_decl_override.m:030:   error: determinism declaration not
user_field_access_decl_override.m:030:   satisfied.
user_field_access_decl_override.m:030:   Declared `det', inferred `semidet'.
user_field_access_decl_override.m:035:   Call to
user_field_access_decl_override.m:035:   `user_field_access_decl_override.f1
user_field_access_decl_override.m:035:   :='(in, in) = out can fail.
user_field_access_decl_override.m:035:   In unification of `STATE_VARIABLE_Foo'
user_field_access_decl_override.m:035:   and `'f1 :='(STATE_VARIABLE_Foo_0,
user_field_access_decl_override.m:035:   X)':
